src/components/Element/styles.css
.element_list {
    list-style-type: none;
    margin: 0;
    padding-left: 20px;
}

.element_item {
    margin-left: 20px;
    padding: 5px 0;
}

.element_item_collapse {
    cursor: pointer;
}

.element_item_prop-name {
    font-weight: 600;
}

.element_item_array-size {
    display: inline-block;
    margin-left: 10px;
}

.element_item_value-separator {
    display: inline-block;
    text-align: center;
    min-width: 20px;
}

